--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -11,6 +11,7 @@
 	/* Colors */
 	--brand-pink: #d5509d;
 	--brand-cyan: #46dffc;
+	--brand-gray: #161718;
 	--white: #ffffff;
 	--black: #000000;
 	--accent: #6750a3;
