--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -59,6 +59,7 @@
 	--gd-page: linear-gradient(180deg, #f5f5f5 0%, #f3f5fd 61.98%, #dde0e9 100%);
 	--black-gradient-r: linear-gradient(90deg, rgba(255, 255, 255, 0) 5%, rgba(0, 0, 0, 80) 100%);
 	--black-gradient-l: linear-gradient(90deg, rgba(0, 0, 0, 80) 0%, rgba(255, 255, 255, 0) 95%);
+	--vertical-gradient: linear-gradient(180deg, var(--brand-cyan) 18%, var(--brand-pink) 62.01%);
 
 	/* Shadows */
 	--shadow-section: 0px 16px 88px rgba(0, 0, 0, 0.07);
